--- a/src/assets/css/lessons.css
+++ b/src/assets/css/lessons.css
@@ -466,6 +466,7 @@ body {
     max-width: 15vw;
     padding: .2rem;
     z-index: 1000;
+    animation: fadeInScaleUp 0.5s ease-in forwards;
 }
 
 .meetingContainerNotOpened {
@@ -562,3 +563,14 @@ body {
         --items-per-screen: 2;
     }
 }
+
+@keyframes fadeInScaleUp {
+    from {
+      opacity: 0;
+      transform: scale(0.95);
+    }
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
