--- a/src/assets/css/orders.css
+++ b/src/assets/css/orders.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Karantina:wght@300;400;700&display=swap");
+
 .orderContainer {
     display: flex;
     justify-content: center;
@@ -24,4 +26,35 @@
     font-size: 2rem;
     font-weight: bold;
     margin-top: 1rem;
+}
+
+.modal-header{
+  padding: 0.5rem 1rem;
+}
+.modal-title{
+  color: #ffd700;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.modal-body{
+  font-family: "Karantina", system-ui;
+  color: #dddddd;
+}
+
+.modal-content{
+  padding:1.5rem; 
+  background-color: "transparent";
+  border: 2px solid #edcc36;
+  border-radius: 0.3rem;
+  color:aliceblue
+}
+
+.video-container {
+  position: relative;
+}
+
+.video-container video {
+  width: 100%;
+  height: 100%;
 }
